# wpl2folder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  messages.h  messages_ptbr.h  vcpkg.json
